# tutu-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TONE_OF_VOICE.md  pyproject.toml
.github/workflows/: ci.yml  promote.yml  release.yml
app/: __init__.py  bootstrap.py  config.py  logging_config.py  main.py  voice.py  webhook.py
app/adapters/: __init__.py  buffered_analytics.py  clock.py  file_catalog.py  hybrid_catalog.py  mcp_mappers.py  openai_destination_discovery.py  openai_discovery.py  openai_parser.py  resilient_tutu.py  sqlite_feedback.py  tutu_mcp.py
app/bot/: __init__.py  callbacks.py  conversation.py  discovery_conversation.py  discovery_formatters.py  feedback_conversation.py  formatters.py  router.py  update_processor.py
app/domain/: __init__.py  content_models.py  discovery_models.py  errors.py  models.py  operational_models.py  product_models.py
app/ports/: __init__.py  analytics.py  catalog.py  clock.py  content.py  discovery_llm.py  feedback.py  parser.py  tutu.py
app/prompts/: __init__.py  clarification_v1.py  destination_discovery_v1.py  intent_v1.py  narration_v1.py  narration_v2.py  product_context.py
app/services/: __init__.py  candidate_selector.py  clarification_policy.py  combinations.py  date_rules.py  input_safety.py  (+20 more)
docs/: TECHNICAL_GUIDE.md  USER_GUIDE.md
evals/: intent_v1.jsonl  narration_v1.jsonl  narration_v2.jsonl
scripts/: build_intent_eval_corpus.py  check_openai.py  check_secrets.py  inspect_tutu_mcp.py  run_discovery_evals.py  smoke_tutu_mcp.py  validate_cicd.py  validate_destination_catalog.py
(+55 files in other folders)
