[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tutu-assistant"
version = "0.2.0"
description = "Telegram assistant for planning short round trips with Tutu"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "mcp==1.28.1",
  "openai==2.46.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "python-telegram-bot[job-queue]==22.8",
  "starlette==1.3.1",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.0.0",
  "ruff==0.15.22",
]

[project.scripts]
tutu-assistant = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001"]
